--- a/index.html
+++ b/index.html
@@ -3,42 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Personal</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Portafolio de Daniela Parra</title>
+    <link rel="stylesheet" href="styles.css"> 
+
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Mi Página Personal</h1>
-        <nav>
-            <ul>
-                <li><a href="#sobre-mi">Sobre Mí</a></li>
-                <li><a href="#proyectos">Proyectos</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <section id="sobre-mi">
+        <h1>Daniela Parra</h1>
+        
+    </header>
+    <section id="about">
         <h2>Sobre Mí</h2>
-        <p>Hola, soy [Tu Nombre], un [Tu Profesión] apasionado por [Tus Intereses]. Me dedico a [Descripción breve de lo que haces].</p>
+        <p>Daniela Parra soy una estudiante de Desarrollo Web enfocada en React. Apasionada por aprender y enfrentar nuevos desafíos en programación.</p>
     </section>
 
-    <section id="proyectos">
+    <section id="projects">
         <h2>Proyectos</h2>
+        <div class="project">
+            <h3>Proyecto 1</h3>
+            <p>Descripción breve del proyecto.</p>
+            <a href="#">Ver Proyecto</a>
+        </div>
+        <div class="project">
+            <h3>Proyecto 2</h3>
+            <p>Descripción breve del proyecto.</p>
+            <a href="#">Ver Proyecto</a>
+        </div>
+    </section>
+
+    <section id="skills">
+        <h2>Habilidades</h2>
         <ul>
-            <li>Proyecto 1: Descripción breve del proyecto.</li>
-            <li>Proyecto 2: Descripción breve del proyecto.</li>
-            <li>Proyecto 3: Descripción breve del proyecto.</li>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>Git</li>
+            <li>Responsive Design</li>
         </ul>
     </section>
 
-    <section id="contacto">
+    <section id="contact">
         <h2>Contacto</h2>
-        <p>Puedes contactarme en: <a href="mailto:tucorreo@example.com">tucorreo@example.com</a></p>
+        <form action="mailto:tuemail@dominio.com" method="post" enctype="text/plain">
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" name="name">
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email">
+            <label for="message">Mensaje:</label>
+            <textarea id="message" name="message"></textarea>
+            <input type="submit" value="Enviar">
+        </form>
     </section>
 
     <footer>
-        <p>&copy; 2024 [Tu Nombre]. Todos los derechos reservados.</p>
+        <p>© 2024 Daniela Parra</p>
+        <div class="social-media">
+            <a href="#">LinkedIn</a>
+            <a href="#">GitHub</a>
+            <a href="#">Twitter</a>
+        </div>
     </footer>
 </body>
 </html>
