--- a/index.html
+++ b/index.html
@@ -9,31 +9,40 @@
 </head>
 <body>
     <header>
-
+        <img src="images/fondo.jpg" alt="Imagen de perfil de Daniela Parra" class="perfil-img">
         <h1>Daniela Parra</h1>
-        
-    </header>
+
+    </header>   
+
     <section id="about">
         <h2>Sobre Mí</h2>
-        <p>Daniela Parra soy una estudiante de Desarrollo Web enfocada en React. Apasionada por aprender y enfrentar nuevos desafíos en programación.</p>
+        <p>soy una estudiante de Desarrollo Web enfocada en React. 
+            Apasionada por aprender y enfrentar nuevos desafíos en programación.</p>
+            <ul>
+                <!-- Enlaces a redes sociales -->
+                <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+                <li><a href="https://twitter.com/">Twitter</a></li>
+                <li><a href="https://github.com/">GitHub</a></li>
+                <!-- Agrega más enlaces a tus redes sociales aquí -->
+            </ul>
     </section>
 
     <section id="projects">
-        <h2>Proyectos</h2>
+        <h3>Proyectos</h3>
         <div class="project">
-            <h3>Proyecto 1</h3>
+            <h4>Proyecto 1</h4>
             <p>Descripción breve del proyecto.</p>
             <a href="#">Ver Proyecto</a>
         </div>
         <div class="project">
-            <h3>Proyecto 2</h3>
+            <h4>Proyecto 2</h4>
             <p>Descripción breve del proyecto.</p>
             <a href="#">Ver Proyecto</a>
         </div>
     </section>
 
     <section id="skills">
-        <h2>Habilidades</h2>
+        <h3>Habilidades</h3>
         <ul>
             <li>HTML5</li>
             <li>CSS3</li>
